--- a/index.html
+++ b/index.html
@@ -4,23 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000">
-    <!--
-      manifest.json provides metadata used when your web app is added to the
-      homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
-    -->
-    <link rel="manifest" href="manifest.json">
-    <link rel="shortcut icon" href="favicon.ico">
-    <link rel="stylesheet" href="fonts/font.css">
-    <link rel="stylesheet" href="style.css">
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
+    <link rel="manifest" href="public/manifest.json">
+    <link rel="shortcut icon" href="public/favicon.ico">
+    <link rel="stylesheet" href="public/fonts/font.css">
+    <link rel="stylesheet" href="public/style.css">
 
     <title>SPB Frontend Competition</title>
   </head>
@@ -46,8 +33,8 @@
 
         <div class="Header-wrapper">
           <div class="Header-logos">
-            <img src="ralogo.svg" class="Header-logo Header-logo_ral" alt="React Amsterdam Logo" />
-            <img src="spbflogo.svg" class="Header-logo Header-logo_spbf" alt="SPB Frontend Logo" />
+            <img src="public/ralogo.svg" class="Header-logo Header-logo_ral" alt="React Amsterdam Logo" />
+            <img src="public/spbflogo.svg" class="Header-logo Header-logo_spbf" alt="SPB Frontend Logo" />
           </div>
           <h1 class="Header-title">SPB Frontend & React Amsterdam Competition</h1>
         </div>
@@ -68,27 +55,15 @@
               State Management as well as a crash course on React Native.
             </p>
             <div class="Body-images">
-              <img src="01.png" class="Body-img" alt="01" />
-              <img src="02.png" class="Body-img" alt="02" />
-              <img src="03.png" class="Body-img" alt="03" />
+              <img src="public/01.png" class="Body-img" alt="01" />
+              <img src="public/02.png" class="Body-img" alt="02" />
+              <img src="public/03.png" class="Body-img" alt="03" />
             </div>
           </div>
         </div>
         <footer class="Footer-footer">
           <a href="//spb-frontend.ru">SPB Frontend 2018</a>
         </footer>
-
-    <!-- <div id="root"></div> -->
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
 
   </body>
 </html>
