оптимизация svg и подвоз шрифтов

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="public/manifest.json">
     <link rel="shortcut icon" href="public/favicon.ico">
-    <link rel="stylesheet" href="public/fonts/font.css">
+    <link rel="stylesheet" href="public/fonts/fonts.css">
     <link rel="stylesheet" href="public/style.css">
 
     <title>SPB Frontend Competition</title>
@@ -23,7 +23,7 @@
           muted
           autoPlay
           loop
-          poster="dummy_bg.jpg"
+          poster="public/dummy_bg.jpg"
           id="bgvid">
           <source src="https://react.amsterdam/video/video.webm" type="video/webm" />
           <source src="https://react.amsterdam/video/video.mp4" type="video/mp4" />
