--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
     <link rel="manifest" href="public/manifest.json">
     <link rel="shortcut icon" href="public/favicon.ico">
     <link rel="stylesheet" href="public/fonts/fonts.css">
-    <link rel="stylesheet" href="public/style.css">
+    <!-- <link rel="stylesheet" href="public/style.css"> -->
 
     <title>SPB Frontend Competition</title>
   </head>
   <body>
       <style>
-
-
-        </style>
+        .link{color:#007bff;text-decoration:none;background-color:transparent}body{margin:0;padding:0;text-align:center}html body *{font-family:'Open Sans',sans-serif!important}.Header-header{padding:0;color:#00dd3b;overflow:hidden;position:relative;min-height:100vh;flex-direction:column;display:flex}.Header-logos{display:flex;margin-bottom:40px}.Header-logo{height:80px}.Header-logo_spbf{margin-left:40px}.Header-title{line-height:1.16;font-size:100px;font-weight:700;color:#fff;margin-bottom:.5rem;margin-top:0}.Header-overlay,.Header-video{position:absolute;width:100%;height:100%;top:0;left:0}.Header-video{object-fit:cover;z-index:-1}.Header-overlay{z-index:0;background:url(./overlay_bg.min.svg) 50% rgba(0,0,0,.4)}.Body-body,.Header-wrapper{display:flex;flex-direction:column}.Header-wrapper{position:relative;min-height:100%;z-index:1;display:-ms-flexbox;-ms-flex-direction:column;-ms-flex-pack:center;justify-content:center;-ms-flex-align:center;align-items:center;-ms-flex-line-pack:center;align-content:center;-ms-flex-positive:1;flex-grow:1}.Body-body{padding:32px;background:#1a1d1b;color:#fff}.Body-container{max-width:1260px;margin:0 auto;position:relative;padding:34px 0 80px;color:#fff}.Body-text{line-height:1.6;font-size:20px;font-weight:100;max-width:960px;margin:18px auto}.Body-strong,.Body-title{font-weight:700}.Body-title{width:100%;line-height:1.12;font-size:68px;text-transform:uppercase;margin:14px 0 46px;background:linear-gradient(150deg,#9f0,#00dd3b);background-clip:text;-webkit-background-clip:text;color:transparent}.Body-item{text-align:justify;min-width:400px;max-width:600px;padding:40px;margin:0 auto;flex-shrink:1;flex-grow:1;width:1px}.Body-img{width:calc(100%/3);height:280px;margin-bottom:20px;flex-grow:1;object-fit:cover}.Body-images,.Footer-footer{display:flex;justify-content:center}.Body-title small{line-height:1.4;font-size:34px;font-weight:100;margin:58px 0 14px;color:#fff}.Footer-footer{padding:0 32px 32px;background:#1a1d1b;color:#fff}.Footer-link{color:inherit}
+      </style>
       <header class="Header-header">
         <video
           class="Header-video"
@@ -45,13 +44,13 @@
               <small>React Amsterdam is a celebration of good things coming together:</small>
               <div>REACT THAT ROCKS AND SPRING IN AMSTERDAM THAT BLOSSOMS</div>
             </h2>
-            <p>
+            <p class="Body-text">
               A full-day, two-track conference on all things React, gathering Front-end and Full-stack developers across
-              the globe in the tech heart of Europe. We're coming back with a new gig on <strong>April 13, 2018</strong>.
+              the globe in the tech heart of Europe. We're coming back with a new gig on <span class="Body-strong">April 13, 2018</span>.
               Mark your calendars for the biggest React community event.
               <br />
               Same as last year, day before the main event, we'll host
-              <a href="https://react.amsterdam/workshops">training day</a>, with three workshops on advanced React and
+              <a class="link" href="https://react.amsterdam/workshops">training day</a>, with three workshops on advanced React and
               State Management as well as a crash course on React Native.
             </p>
             <div class="Body-images">
@@ -62,7 +61,7 @@
           </div>
         </div>
         <footer class="Footer-footer">
-          <a href="//spb-frontend.ru">SPB Frontend 2018</a>
+          <a class="Footer-link" href="//spb-frontend.ru">SPB Frontend 2018</a>
         </footer>
 
   </body>
