--- a/index.html
+++ b/index.html
@@ -6,23 +6,23 @@
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="public/manifest.json">
     <link rel="shortcut icon" href="public/favicon.ico">
-    <link rel="stylesheet" href="public/fonts/fonts.min.css">
     <link rel="stylesheet" href="public/style.min.css">
-
     <title>SPB Frontend Competition</title>
-  </head>
-  <body>
+    <style>
+      .link{color:#007bff;text-decoration:none;background-color:transparent}body{margin:0;padding:0;text-align:center}html body *{font-family:'Open Sans',sans-serif!important}.Header-header{padding:0;color:#00dd3b;overflow:hidden;position:relative;min-height:100vh;flex-direction:column;display:flex}.Header-logos{display:flex;margin-bottom:40px}.Header-logo{height:80px}.Header-logo_spbf{margin-left:40px}.Header-title{line-height:1.16;font-size:100px;font-weight:700;color:#fff;margin-bottom:.5rem;margin-top:0}.Header-overlay,.Header-video{position:absolute;width:100%;height:100%;top:0;left:0}.Header-video{object-fit:cover;z-index:-1}.Header-overlay{z-index:0;background:url(data:image/svg+xml;base64,PHN2ZyB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciIHdpZHRoPSI0IiBoZWlnaHQ9IjQiPjxwYXRoIGZpbGwtb3BhY2l0eT0iLjQiIGQ9Ik0wIDBoMnYySDB6TTIgMmgydjJIMnoiLz48L3N2Zz4=) 50% rgba(0,0,0,.4)}.Body-body,.Header-wrapper{display:flex;flex-direction:column}.Header-wrapper{position:relative;min-height:100%;z-index:1;display:-ms-flexbox;-ms-flex-direction:column;-ms-flex-pack:center;justify-content:center;-ms-flex-align:center;align-items:center;-ms-flex-line-pack:center;align-content:center;-ms-flex-positive:1;flex-grow:1}.Body-body{padding:32px;background:#1a1d1b;color:#fff}.Body-container{max-width:1260px;margin:0 auto;position:relative;padding:34px 0 80px;color:#fff}.Body-text{line-height:1.6;font-size:20px;font-weight:100;max-width:960px;margin:18px auto}.Body-strong,.Body-title{font-weight:700}.Body-title{width:100%;line-height:1.12;font-size:68px;text-transform:uppercase;margin:14px 0 46px;background:linear-gradient(150deg,#9f0,#00dd3b);background-clip:text;-webkit-background-clip:text;color:transparent}.Body-item{text-align:justify;min-width:400px;max-width:600px;padding:40px;margin:0 auto;flex-shrink:1;flex-grow:1;width:1px}.Body-img{width:calc(100%/3);height:280px;margin-bottom:20px;flex-grow:1;object-fit:cover}.Body-images,.Footer-footer{display:flex;justify-content:center}.Body-title small{line-height:1.4;font-size:34px;font-weight:100;margin:58px 0 14px;color:#fff}.Footer-footer{padding:0 32px 32px;background:#1a1d1b;color:#fff}.Footer-link{color:inherit}
+    </style>
+    </head>
+      <body>
       <header class="Header-header">
         <video
           class="Header-video"
-          preload="auto"
+          preload="none"
           muted
           autoPlay
           loop
-          poster="public/dummy_bg.jpg"
           id="bgvid">
-          <source src="https://react.amsterdam/video/video.webm" type="video/webm" />
-          <source src="https://react.amsterdam/video/video.mp4" type="video/mp4" />
+          <source src="public/video.webm" type="video/webm" />
+          <source src="public/video.mp4" type="video/mp4" />
         </video>
 
         <div class="Header-overlay"/>
@@ -51,15 +51,13 @@
               State Management as well as a crash course on React Native.
             </p>
             <div class="Body-images">
-              <img src="public/01.png" class="Body-img" alt="01" />
-              <img src="public/02.png" class="Body-img" alt="02" />
-              <img src="public/03.png" class="Body-img" alt="03" />
+              <img src="public/123.png" class="Body-img" alt="123" />
             </div>
           </div>
         </div>
         <footer class="Footer-footer">
           <a class="Footer-link" href="//spb-frontend.ru">SPB Frontend 2018</a>
         </footer>
-
+        <link rel="stylesheet" href="public/fonts/fonts.min.css">
   </body>
 </html>
