Оптимизация иконки spbf

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="Header-wrapper">
           <div class="Header-logos">
             <img src="public/ralogo.svg" class="Header-logo Header-logo_ral" alt="React Amsterdam Logo" />
-            <img src="public/spbflogo.svg" class="Header-logo Header-logo_spbf" alt="SPB Frontend Logo" />
+            <img src="public/spbflogo.min.svg" class="Header-logo Header-logo_spbf" alt="SPB Frontend Logo" />
           </div>
           <h1 class="Header-title">SPB Frontend & React Amsterdam Competition</h1>
         </div>
